app/app-banco-bd/app-banco-bd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-banco-bd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-app
  template:
    metadata:
      labels:
        app: next-app
    spec:
      containers:
        - name: next-app
          image: next-app:latest
          ports:
            - containerPort: 3000
