app/app-banco-bd/app-banco-bd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-banco-bd
spec:
  selector:
    app: app-banco-bd
  ports:
    - port: 80
      targetPort: 3000
