app/app-banco-bd/app-banco-bd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-banco-bd-service
  name: app-banco-bd
spec:
  rules:
    - host: next-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-app
                port:
                  number: 80
